fix delete class view

--- a/OnlineTutor2/Views/Class/Delete.cshtml
+++ b/OnlineTutor2/Views/Class/Delete.cshtml
@@ -34,7 +34,7 @@
                                 <small class="text-muted">учеников</small>
                             </div>
                             <div class="col">
-                                <strong>@Model.Tests.Count</strong><br>
+                                <strong>@Model.RegularTests.Count + @Model.SpellingTests.Count + @Model.PunctuationTests.Count + @Model.OrthoeopyTests.Count</strong><br>
                                 <small class="text-muted">тестов</small>
                             </div>
                             <div class="col">
