--- a/OnlineTutor2/Views/OrthoeopyTest/Index.cshtml
+++ b/OnlineTutor2/Views/OrthoeopyTest/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<OnlineTutor2.Models.OrthoeopyTest>
 @{
-    ViewData["Title"] = "Тесты на орфоэпию";
+    ViewData["Title"] = "Тесты по орфоэпии";
 }
 
 <div class="d-flex justify-content-between align-items-center mb-4">
@@ -19,7 +19,7 @@
 {
     <div class="text-center py-5">
         <i class="fas fa-volume-up text-muted" style="font-size: 4rem;"></i>
-        <h4 class="mt-3 text-muted">У вас пока нет тестов на орфоэпию</h4>
+        <h4 class="mt-3 text-muted">У вас пока нет тестов по орфоэпии</h4>
         <p class="text-muted">Создайте свой первый тест для проверки знаний орфоэпии</p>
         <a asp-action="Create" class="btn btn-success">
             <i class="fas fa-plus"></i> Создать первый тест
@@ -56,7 +56,7 @@ else
                         <div class="row text-center mb-3">
                             <div class="col-4">
                                 <div class="d-flex flex-column">
-                                    <span class="h6 text-success mb-0">@test.Questions.Count</span>
+                                    <span class="h6 text-success mb-0">@test.OrthoeopyQuestions.Count</span>
                                     <small class="text-muted">вопросов</small>
                                 </div>
                             </div>
@@ -68,7 +68,7 @@ else
                             </div>
                             <div class="col-4">
                                 <div class="d-flex flex-column">
-                                    <span class="h6 text-warning mb-0">@test.TestResults.Count</span>
+                                    <span class="h6 text-warning mb-0">@test.OrthoeopyTestResults.Count</span>
                                     <small class="text-muted">прохождений</small>
                                 </div>
                             </div>
@@ -106,7 +106,7 @@ else
                                     <i class="fas fa-ellipsis-v"></i>
                                 </button>
                                 <ul class="dropdown-menu">
-                                    @if (test.Questions.Any())
+                                    @if (test.OrthoeopyQuestions.Any())
                                     {
                                         <li>
                                             <a class="dropdown-item" href="#">
