--- a/OnlineTutor2/Views/StudentTest/TakePunctuation.cshtml
+++ b/OnlineTutor2/Views/StudentTest/TakePunctuation.cshtml
@@ -29,17 +29,17 @@
                     Попытка @Model.TestResult.AttemptNumber из @Model.TestResult.PunctuationTest.MaxAttempts
                 </span>
                 <span class="small text-muted">
-                    Вопрос <span id="currentQuestion">1</span> из @Model.TestResult.PunctuationTest.Questions.Count
+                    Вопрос <span id="currentQuestion">1</span> из @Model.TestResult.PunctuationTest.PunctuationQuestions.Count
                 </span>
             </div>
         </div>
     </div>
 
     <div id="questionsContainer">
-        @for (int i = 0; i < Model.TestResult.PunctuationTest.Questions.Count; i++)
+        @for (int i = 0; i < Model.TestResult.PunctuationTest.PunctuationQuestions.Count; i++)
         {
-            var question = Model.TestResult.PunctuationTest.Questions.ElementAt(i);
-            var existingAnswer = Model.TestResult.Answers.FirstOrDefault(a => a.PunctuationQuestionId == question.Id);
+            var question = Model.TestResult.PunctuationTest.PunctuationQuestions.ElementAt(i);
+            var existingAnswer = Model.TestResult.PunctuationAnswers.FirstOrDefault(a => a.PunctuationQuestionId == question.Id);
 
             <div class="question-card @(i == 0 ? "active" : "d-none")" data-question-index="@i" data-question-id="@question.Id">
                 <div class="card">
@@ -135,7 +135,7 @@
                     <i class="fas fa-exclamation-triangle"></i>
                     <strong>Внимание!</strong> После завершения теста вы не сможете изменить ответы.
                 </div>
-                <p>Вы ответили на <span id="answeredCount">0</span> из @Model.TestResult.PunctuationTest.Questions.Count вопросов.</p>
+                <p>Вы ответили на <span id="answeredCount">0</span> из @Model.TestResult.PunctuationTest.PunctuationQuestions.Count вопросов.</p>
                 <p>Вы уверены, что хотите завершить тест?</p>
             </div>
             <div class="modal-footer">
@@ -227,7 +227,7 @@
 @section Scripts {
     <script>
         let currentQuestionIndex = 0;
-        let totalQuestions = @Model.TestResult.PunctuationTest.Questions.Count;
+        let totalQuestions = @Model.TestResult.PunctuationTest.PunctuationQuestions.Count;
         let timeRemaining = @((int)Model.TimeRemaining.TotalSeconds);
         let answers = {};
         let timerInterval;
@@ -264,7 +264,7 @@
         }
 
         function loadExistingAnswers() {
-            @foreach (var answer in Model.TestResult.Answers)
+            @foreach (var answer in Model.TestResult.PunctuationAnswers)
             {
                     <text>
                     answers[@answer.PunctuationQuestionId] = '@answer.StudentAnswer';
