fixes (not completed)

--- a/OnlineTutor2/Views/StudentManagement/Delete.cshtml
+++ b/OnlineTutor2/Views/StudentManagement/Delete.cshtml
@@ -82,7 +82,7 @@
                 <div class="row mt-3">
                     <div class="col-md-4">
                         <div class="text-center p-3 bg-light rounded">
-                            <h5 class="text-danger">@Model.TestResults.Count</h5>
+                            <h5 class="text-danger">@Model.RegularTestResults.Count + @Model.SpellingTestResults.Count + @Model.PunctuationTestResults.Count + @Model.OrthoeopyTestResults.Count</h5>
                             <small class="text-muted">Результатов тестов</small>
                         </div>
                     </div>
