--- a/OnlineTutor2/Views/Admin/Index.cshtml
+++ b/OnlineTutor2/Views/Admin/Index.cshtml
@@ -149,18 +149,18 @@
                         </a>
                     </div>
                     <div class="col-md-3 mb-2">
-                        <button type="button" class="btn btn-outline-danger w-100" onclick="confirmClearResults()">
-                            <i class="fas fa-trash-alt"></i> Очистить результаты
-                        </button>
+                        <a asp-action="AuditLogs" class="btn btn-outline-info w-100">
+                            <i class="fas fa-history"></i> Журнал действий
+                        </a>
                     </div>
                     <div class="col-md-3 mb-2">
-                        <a asp-action="SystemInfo" class="btn btn-outline-info w-100">
+                        <a asp-action="SystemInfo" class="btn btn-outline-primary w-100">
                             <i class="fas fa-server"></i> Системная информация
                         </a>
                     </div>
                     <div class="col-md-3 mb-2">
-                        <button type="button" class="btn btn-outline-secondary w-100" onclick="exportData()">
-                            <i class="fas fa-download"></i> Экспорт данных
+                        <button type="button" class="btn btn-outline-danger w-100" onclick="confirmClearResults()">
+                            <i class="fas fa-trash-alt"></i> Очистить результаты
                         </button>
                     </div>
                 </div>
