--- a/OnlineTutor2/Views/Admin/UserDetails.cshtml
+++ b/OnlineTutor2/Views/Admin/UserDetails.cshtml
@@ -4,6 +4,8 @@
     var user = Model.User;
 }
 
+@await Html.PartialAsync("_AdminNav")
+
 <div class="mb-4">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
