--- a/OnlineTutor2/Views/Admin/SystemInfo.cshtml
+++ b/OnlineTutor2/Views/Admin/SystemInfo.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Системная информация";
 }
 
+@await Html.PartialAsync("_AdminNav")
+
 <div class="d-flex justify-content-between align-items-center mb-4">
     <div>
         <h2><i class="fas fa-server text-info"></i> Системная информация</h2>
