--- a/OnlineTutor2/Views/Admin/TestResults.cshtml
+++ b/OnlineTutor2/Views/Admin/TestResults.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Результаты тестов";
 }
 
+@await Html.PartialAsync("_AdminNav")
+
 <div class="d-flex justify-content-between align-items-center mb-4">
     <div>
         <h2><i class="fas fa-chart-line text-info"></i> Результаты тестов</h2>
