--- a/OnlineTutor2/Views/Admin/Index.cshtml
+++ b/OnlineTutor2/Views/Admin/Index.cshtml
@@ -154,6 +154,11 @@
                         </a>
                     </div>
                     <div class="col-md-3 mb-2">
+                        <a asp-action="Statistics" class="btn btn-outline-success w-100">
+                            <i class="fas fa-chart-bar"></i> Статистика
+                        </a>
+                    </div>
+                    <div class="col-md-3 mb-2">
                         <a asp-action="SystemInfo" class="btn btn-outline-primary w-100">
                             <i class="fas fa-server"></i> Системная информация
                         </a>
